Update 658. Find K closest Elements.md

--- a/658. Find K closest Elements.md
+++ b/658. Find K closest Elements.md
@@ -1,3 +1,5 @@
+Big logical mistake, it's not just make k elements "evenly" lie around in the center target.
+
 ```python
 class Solution(object):
     def searchFirstX(self, nums, target):
@@ -24,13 +26,18 @@ class Solution(object):
         :rtype: List[int]
         """
         if x < arr[0]:
-            return arr[: (k-1)]
+            return arr[: k]
         if x > arr[len(arr) - 1]:
-            return arr[:(k-1):-1]
+            return arr[-k:]
         
         # else x <= arr[0] <= arr[len(arr) - 1]
         idx_c = self.searchFirstX(arr, x)
         
         # 3, find the k elements
+        q = (k-1) // 2
         L, R = idx_c, len(arr) - 1 - idx_c 
+        if q < min(L,R):
+            return arr[idx_c - q -1:idx_c - q -1 + k]
+        else:
+            return arr[:k] if L <= R else arr[-k:]
 ```
