Update 658. Find K closest Elements.md

--- a/658. Find K closest Elements.md
+++ b/658. Find K closest Elements.md
@@ -1,43 +1,24 @@
-Big logical mistake, it's not just make k elements "evenly" lie around in the center target.
+658. Find K Closest Elements
+Medium
 
-```python
-class Solution(object):
-    def searchFirstX(self, nums, target):
-        l, r = 0, len(nums) - 1
-        while l + 1 < r:
-            mid = l + (r - l) // 2
-            if nums[mid] == target and nums[mid - 1] != nums[mid]:
-                return mid
-            if nums[mid] >= target:
-                r = mid
-            else:
-                l = mid
-        # post-process, if not returned, then there will be 2 elements unsearched
-        if abs(nums[l] - target) > abs(nums[r] - target):
-            return r 
-        else:
-            return l 
-    
-    def findClosestElements(self, arr, k, x):
-        """
-        :type arr: List[int]
-        :type k: int
-        :type x: int
-        :rtype: List[int]
-        """
-        if x < arr[0]:
-            return arr[: k]
-        if x > arr[len(arr) - 1]:
-            return arr[-k:]
-        
-        # else x <= arr[0] <= arr[len(arr) - 1]
-        idx_c = self.searchFirstX(arr, x)
-        
-        # 3, find the k elements
-        q = (k-1) // 2
-        L, R = idx_c, len(arr) - 1 - idx_c 
-        if q < min(L,R):
-            return arr[idx_c - q -1:idx_c - q -1 + k]
-        else:
-            return arr[:k] if L <= R else arr[-k:]
-```
+869
+
+176
+
+Favorite
+
+Share
+Given a sorted array, two integers k and x, find the k closest elements to x in the array. The result should also be sorted in ascending order. If there is a tie, the smaller elements are always preferred.
+
+Example 1:
+Input: [1,2,3,4,5], k=4, x=3
+Output: [1,2,3,4]
+Example 2:
+Input: [1,2,3,4,5], k=4, x=-1
+Output: [1,2,3,4]
+Note:
+The value k is positive and will always be smaller than the length of the sorted array.
+Length of the given array is positive and will not exceed 104
+Absolute value of elements in the array and x will not exceed 104
+UPDATE (2017/9/19):
+The arr parameter had been changed to an array of integers (instead of a list of integers). Please reload the code definition to get the latest changes.
