--- a/658. Find K closest Elements.md
+++ b/658. Find K closest Elements.md
@@ -16,3 +16,5 @@ Absolute value of elements in the array and x will not exceed 104
 
 UPDATE (2017/9/19):
 The arr parameter had been changed to an array of integers (instead of a list of integers). Please reload the code definition to get the latest changes.
+
+# note that the closest means the absolute distance, not the position in the array
