Update 658. Find K closest Elements.md

--- a/658. Find K closest Elements.md
+++ b/658. Find K closest Elements.md
@@ -1,4 +1,4 @@
-658. Find K Closest Elements
+# 658. Find K Closest Elements
 Medium
 
 Given a sorted array, two integers k and x, find the k closest elements to x in the array. The result should also be sorted in ascending order. If there is a tie, the smaller elements are always preferred.
@@ -17,4 +17,5 @@ Absolute value of elements in the array and x will not exceed 104
 UPDATE (2017/9/19):
 The arr parameter had been changed to an array of integers (instead of a list of integers). Please reload the code definition to get the latest changes.
 
-# note that the closest means the absolute distance, not the position in the array
+## note that the closest means the absolute distance, not the position in the array
+
