--- a/739. Daily Temperatures.md
+++ b/739. Daily Temperatures.md
@@ -1,5 +1,11 @@
-# i don't get it 
+Given a list of daily temperatures T, return a list such that, for each day in the input, tells you how many days you would have to wait until a warmer temperature. If there is no future day for which this is possible, put 0 instead.
 
+For example, given the list of temperatures T = [73, 74, 75, 71, 69, 72, 76, 73], your output should be [1, 1, 4, 2, 1, 1, 0, 0].
+
+Note: The length of temperatures will be in the range [1, 30000]. Each temperature will be an integer in the range [30, 100].
+
+
+## backwards
 ```python
 class Solution(object):
     def dailyTemperatures(self, T: List[int]) -> List[int]:        
@@ -12,5 +18,23 @@ class Solution(object):
             if stack:
                 res[i] = stack[-1] - i
             stack.append(i)
+        return res 
+```
+## forwards
+```python
+class Solution(object):
+    def dailyTemperatures(self, T: List[int]) -> List[int]: 
+        res = [0] * len(T)
+        stack = []
+
+        for i in range(len(T)):
+            while stack and T[i] > T[stack[-1]]:
+                top = stack.pop()
+                res[top] = i - top
+            stack.append(i)
+
+        for idx in stack:
+            res[idx] = 0
+
         return res 
 ```
