--- a/Week 51/206. Reverse Linked List.md
+++ b/Week 51/206. Reverse Linked List.md
@@ -10,3 +10,33 @@ Example:
 
 Follow up:
 A linked list can be reversed either iteratively or recursively. Could you implement both?
+
+
+```python
+# Definition for singly-linked list.
+# class ListNode:
+#     def __init__(self, x):
+#         self.val = x
+#         self.next = None
+
+This is a great example for understanding recursion and the relation between 'recursively' and 'iteratively', don't mix them up.
+
+Implement recursively: the **base case** would be the last 2 nodes in the tail, the **recurrence relation** is: imagine that you have a   
+class Solution():
+  def reverseList(self, head: ListNode) -> ListNode:
+    if not head.next:
+      return head 
+    new_head = self.reverseList(head.next) # the new_head is always the tail of the original linked list, it's not changing during the recursive process
+    # reverse at current head
+    head.next.next = head 
+    head.next = None
+    
+    return new_head 
+    
+    
+    
+    
+    
+    
+
+```
