Update 206. Reverse Linked List.md

--- a/Week 51/206. Reverse Linked List.md
+++ b/Week 51/206. Reverse Linked List.md
@@ -24,7 +24,7 @@ This is a great example for understanding recursion and the relation between 're
 Implement recursively: the **base case** would be the last 2 nodes in the tail, the **recurrence relation** is: imagine that you have a   
 class Solution():
   def reverseList(self, head: ListNode) -> ListNode:
-    if not head.next:
+    if not head or not head.next: # 1
       return head 
     new_head = self.reverseList(head.next) # the new_head is always the tail of the original linked list, it's not changing during the recursive process
     # reverse at current head
@@ -32,11 +32,5 @@ class Solution():
     head.next = None
     
     return new_head 
-    
-    
-    
-    
-    
-    
-
 ```
+*1*: have to include **if not head**, otherwise cannot deal with empty linked list
