Update 206. Reverse Linked List.md

--- a/Week 51/206. Reverse Linked List.md
+++ b/Week 51/206. Reverse Linked List.md
@@ -19,18 +19,21 @@ A linked list can be reversed either iteratively or recursively. Could you imple
 #         self.val = x
 #         self.next = None
 
-This is a great example for understanding recursion and the relation between 'recursively' and 'iteratively', don't mix them up.
+This is a great example for understanding recursion and the relation 
+between 'recursively' and 'iteratively', don't mix them up.
 
-Implement recursively: the **base case** would be the last 2 nodes in the tail, the **recurrence relation** is: imagine that you have a   
+Implement recursively: the **base case** would be the last 2 nodes in the tail, 
+the **recurrence relation** is: imagine that you have a   
 class Solution():
   def reverseList(self, head: ListNode) -> ListNode:
-    if not head or not head.next: # 1
+    if not head or not head.next: #1
       return head 
-    new_head = self.reverseList(head.next) # the new_head is always the tail of the original linked list, it's not changing during the recursive process
+    new_head = self.reverseList(head.next) #2
     # reverse at current head
     head.next.next = head 
     head.next = None
     
     return new_head 
 ```
-*1*: have to include **if not head**, otherwise cannot deal with empty linked list
+*#1*: have to include **if not head**, otherwise cannot deal with empty linked list
+*#2*: the **new_head** is always the last node in the original linked list, it's not changing during the recursion process
