--- a/Hash Table/1. Two Sum.md
+++ b/Hash Table/1. Two Sum.md
@@ -6,3 +6,16 @@ You may assume that each input would have exactly one solution, and you may not 
 Given nums = [2, 7, 11, 15], target = 9,
 Because nums[0] + nums[1] = 2 + 7 = 9,
 return [0, 1].
+
+```python
+# The best way is to use a hash map
+class Solution:
+    def twoSum(self, nums: List[int], tar: int) -> List[int]:
+        # sol 2: using hash map 
+        h_m = {nums[i] : i for i in range(len(nums))}
+        
+        for i in range(len(nums)):
+            diff = tar - nums[i]
+            if diff in h_m and h_m[diff] != i:
+                return [i, h_m[diff]]
+```
