--- a/Hash Table/1. Two Sum.md
+++ b/Hash Table/1. Two Sum.md
@@ -8,7 +8,7 @@ Because nums[0] + nums[1] = 2 + 7 = 9,
 return [0, 1].
 
 ```python
-# The best way is to use a hash map
+# The best way is to use a hash map, because hash map supports quick insertion and search
 class Solution:
     def twoSum(self, nums: List[int], tar: int) -> List[int]:
         # sol 2: using hash map 
