Update 219. Contains Duplicate II.md

--- a/Hash Table/219. Contains Duplicate II.md
+++ b/Hash Table/219. Contains Duplicate II.md
@@ -17,3 +17,46 @@ Given an array of integers and an integer k, find out whether there are two dist
 > Input: nums = [1,2,3,1,2,3], k = 2
 >
 > Output: false
+
+```python
+# sol 1: maintain a hash map, in which the key num in nums and the value is a list of index of each
+# ocurrence, for each key, when it already exists, check the difference between last two elements 
+# in its value (the index list), if it less or equal to k, return True
+
+class Solution:
+    def containsNearbyDuplicate(self, nums: List[int], k: int) -> bool:
+      hm = {}
+      for i in range(len(nums)):
+        hm[nums[i]] = hm.get(nums[i], []) + [i]
+        if len(hm[nums[i]]) >= 2 and (hm[nums[i]][-1] - hm[nums[i]][-2]) <= k:
+          return True
+      return False
+# TC: O(n)
+# SC: O(n)
+```
+
+
+
+
+```python
+# sol 2: keep a sliding window (hash set) of size k
+
+class Solution:
+    def containsNearbyDuplicate(self, nums: List[int], k: int) -> bool:
+      hs = set()
+      for i in range(len(nums)):
+        if nums[i] in hs:
+          return True
+      hs.add(nums[i])
+      if len(hs) > k:
+        hs.remove(nums[i - k])
+      return False 
+# TC: O(n)
+# SC: O(k)        
+        
+        
+        
+        
+
+
+```
