--- a/重点题/98. Validate Binary Search Tree.md
+++ b/重点题/98. Validate Binary Search Tree.md
@@ -5,4 +5,50 @@ Assume a BST is defined as follows:
 The left subtree of a node contains only nodes with keys less than the node's key.
 The right subtree of a node contains only nodes with keys greater than the node's key.
 Both the left and right subtrees must also be binary search trees.
+
+
+first time bad version: for each node, I check it'
+```python
+class Solution:
+    def isValidBST(self, root: TreeNode) -> bool:
+        if not root:
+            return False
+        
+        L = self.isValidBST(root.left) # L = [L, max_L, min_L ]
+        R = self.isValidBST(root.right) # R = [R, max_R, min_R ]
+        
+        if not root.left and not root.right:
+            return [True, root.val, root.val]
+        
+        if not root.right:
+            return [L[0] and L[1] <= root.val, root.val, L[2]]
+        
+        if not root.left:
+            return [R[0] and root.val <= R[2], R[1], root.val]
+        
+        return [L[0] and R[0] and L[1] <= root.val <= R[2], R[1], L[2]]
+
+```
+sol 1: in-order traversal the tree, and check if the returned list is strictly increase
+```python
+class Solution:
+    def __init__(self):
+        self.res = []
+    def isValidBST(self, root: TreeNode) -> bool:
+        self.inorderTraversal(root) 
+        for i in range(len(self.res) - 1):
+            if self.res[i] >= self.res[i+1]:
+                return False
+        return True
+    
+    def inorderTraversal(self, root):   
+        if not root:
+            return 
+        self.inorderTraversal(root.left)
+        self.res.append(root.val)
+        self.inorderTraversal(root.right)
+        return self.res 
+    
+```
  
+
