Update 121. Best Time to Buy and Sell Stock.md

--- a/错题集/121. Best Time to Buy and Sell Stock.md
+++ b/错题集/121. Best Time to Buy and Sell Stock.md
@@ -19,3 +19,8 @@ Note that you cannot sell a stock before you buy one.
 > Output: 0
 >
 > Explanation: In this case, no transaction is done, i.e. max profit = 0.
+
+错误点：can I just find the minimum value of the list, then I check if there are any value bigger than it which comes later than it. If yes, just use the largest one minus it ? No, counter example, [2,4,1].
+
+Note: 这不是一个dynamic programming的题
+
