--- a/基操集/21. Merge Two Sorted Lists.md
+++ b/基操集/21. Merge Two Sorted Lists.md
@@ -1,9 +1,11 @@
 Merge two sorted linked lists and return it as a new list. 
 The new list should be made by splicing together the nodes of the first two lists.
 
+```
 Example:
-* Input: 1->2->4, 1->3->4
-* Output: 1->1->2->3->4->4
+ Input: 1->2->4, 1->3->4
+ Output: 1->1->2->3->4->4
+```
 
 If solve this problem with recursion, the recurrence relation is error prone.
 **mergeTwoLists(l1,l2) = min_h -> mergeTwoLists(max_h, min_h.next)** where *min_h* is the two current head pointer
