--- a/Tree/101. Symmetric Tree.md
+++ b/Tree/101. Symmetric Tree.md
@@ -22,3 +22,20 @@ But the following [1,2,2,null,3,null,3] is not:
 
 Note:
 Bonus points if you could solve it both recursively and iteratively.
+
+
+Key point: what is a mirror reflection? For a root node, recursively switch its left subtree and right subtree, if the new tree is identical to the old tree, then it is a mirror reflection.
+
+```python
+# Definition for a binary tree node.
+# class TreeNode:
+#     def __init__(self, x):
+#         self.val = x
+#         self.left = None
+#         self.right = None
+
+class Solution:
+    def isSymmetric(self, root: TreeNode) -> bool:
+
+
+```
