Update 332. Reconstruct Itinerary.md

--- a/Backtracking/332. Reconstruct Itinerary.md
+++ b/Backtracking/332. Reconstruct Itinerary.md
@@ -21,7 +21,7 @@ Explanation: Another possible reconstruction is ["JFK","SFO","ATL","JFK","ATL","
 But it is larger in lexical order.
 ```
 
-1st attempt:
+1st attempt (wrong solution):
 ```python
         d = {}
         for ticket in tickets:
