Update 332. Reconstruct Itinerary.md

--- a/Backtracking/332. Reconstruct Itinerary.md
+++ b/Backtracking/332. Reconstruct Itinerary.md
@@ -48,3 +48,18 @@ But it is larger in lexical order.
         
         return res 
 ```
+
+
+```python
+def findItinerary(self, tickets):
+    targets = collections.defaultdict(list)
+    for a, b in sorted(tickets)[::-1]:
+        targets[a] += b,
+    route = []
+    def visit(airport):
+        while targets[airport]:
+            visit(targets[airport].pop())
+        route.append(airport)
+    visit('JFK')
+    return route[::-1]
+```
