Update 10. Regular Expression Matching.md

--- a/Backtracking/10. Regular Expression Matching.md
+++ b/Backtracking/10. Regular Expression Matching.md
@@ -50,3 +50,7 @@ s = "mississippi"
 p = "mis*is*p*."
 Output: false
 ```
+
+
+key point: why example 3 works？Need to look at * first, it could extend . for "..", then ".." could match "ab".
+Not that first look at ., it matches "a" and then * extends "aa"
