Update 655. Print Binary Tree.md

--- a/Stuck集/655. Print Binary Tree.md
+++ b/Stuck集/655. Print Binary Tree.md
@@ -47,3 +47,13 @@ Output:
  ["4", "",  "", "",  "", "", "", "",  "",  "",  "",  "",  "", "", ""]]
 ```
 Note: The height of binary tree is in the range of [1, 10].
+
+
+key point: 
+
+1. need to find the height of the tree (height of the root node)
+2. cannot recursively return and concatenate the output, good way is to initilize the whole empty array and modify this array
+3. How to recursively indicate each node's position？Use 2 pointers to indicate current root's position(row and col), row == its depth (an parameter in the recursive function, updated as +1 for each recursive call). Col: for each root, if this sub-tree corresponds to a result with width = W, then it's located at the M/2. Integrated in the recursive process, use 2 pointers start with l = 0 and r = len(intilized matrix[0] - 1 to update
+
+
+
