--- a/Stuck集/655. Print Binary Tree.md
+++ b/Stuck集/655. Print Binary Tree.md
@@ -56,4 +56,5 @@ key point:
 3. How to recursively indicate each node's position？Use 2 pointers to indicate current root's position(row and col), row == its depth (an parameter in the recursive function, updated as +1 for each recursive call). Col: for each root, if this sub-tree corresponds to a result with width = W, then it's located at the M/2. Integrated in the recursive process, use 2 pointers start with l = 0 and r = len(intilized matrix[0] - 1 to update
 
 
-
+易错点:
+1. output的res的width = 2 ** height - 1, not 2 ** height
