Update 5. Longest Palindromic Substring.md

--- a/错题集/5. Longest Palindromic Substring.md
+++ b/错题集/5. Longest Palindromic Substring.md
@@ -12,3 +12,26 @@ Example 2:
 Input: "cbbd"
 Output: "bb"
 ```
+
+## key points:
+If don't use the Manacher's Algorithm mentioned in the solution post, the time complexity will always be O(n^2), based on this, since all the normal methods cost O(n^2) time, no need to fixated on coming up with some `very clever and fancy` way to accomplish the goal.
+
+### sol 1: 
+Iterate over the string with index i, as a start point to check if it starts with a palindrome, 
+```python
+if not s: return “"
+res = ""
+for i in range(len(s)):
+    j = i + 1
+    # While j is less than length of string
+    # AND res is *not* longer than substring s[i:]
+    while j <= len(s) and len(res) <= len(s[i:]):
+        # If substring s[i:j] is a palindrome
+        # AND substring is longer than res
+        if s[i:j] == s[i:j][::-1] and len(s[i:j]) > len(res):
+            res = s[i:j]
+        j += 1
+
+return res
+
+```
