Update 5. Longest Palindromic Substring.md

--- a/错题集/5. Longest Palindromic Substring.md
+++ b/错题集/5. Longest Palindromic Substring.md
@@ -14,10 +14,11 @@ Output: "bb"
 ```
 
 ## key points:
-If don't use the Manacher's Algorithm mentioned in the solution post, the time complexity will always be O(n^2), based on this, since all the normal methods cost O(n^2) time, no need to fixated on coming up with some `very clever and fancy` way to accomplish the goal.
+If don't use the Manacher's Algorithm mentioned in the solution post, the time complexity will always be O(n^2), based on this, since all the normal methods cost O(n^2) time, no need to fixated on coming up with some `very clever and fancy` way to accomplish the goal. 
+
 
 ### sol 1: 
-Iterate over the string with index i, as a start point to check if it starts with a palindrome, 
+Iterate over the string with index i, as a start point to check if it starts with a palindrome. But, this solution's best time complexity is O(n^2)! Can not do better, because for each i, j goes over all the index behind i. Other solution could have better best time complexity！
 ```python
 if not s: return “"
 res = ""
