--- a/错题集/5. Longest Palindromic Substring.md
+++ b/错题集/5. Longest Palindromic Substring.md
@@ -34,5 +34,25 @@ for i in range(len(s)):
         j += 1
 
 return res
-
 ```
+
+### sol 2:
+Start with each possible center of a palindrome (i for palindrome with odd length, [i,i] for palindrome with even length), check if could such palindrome could expand.
+```python
+        for i in range(len(s)): # for each index i, check the odd case and even case
+            tmp_1 = self.helper(s,i,i)
+            if len(tmp_1) > len(res):
+                res = tmp_1
+            tmp_2 = self.helper(s,i,i+1) # the i+1 for the last index is not buggy, since it's dealt in the helper function
+            if len(tmp_2) > len(res):
+                res = tmp_2
+        return res
+
+    def helper(self, s, l, r):
+        while l >= 0 and r <= len(s) - 1 and s[l] == s[r]:
+            l -= 1; r += 1
+        return s[l+1:r]
+```
+
+
+
