Update 5. Longest Palindromic Substring.md

--- a/错题集/5. Longest Palindromic Substring.md
+++ b/错题集/5. Longest Palindromic Substring.md
@@ -39,6 +39,9 @@ return res
 ### sol 2:
 Start with each possible center of a palindrome (i for palindrome with odd length, [i,i] for palindrome with even length), check if could such palindrome could expand.
 ```python
+class Solution:
+    def longestPalindrome(self, s: str) -> str:
+        res = "" # res stands for results
         for i in range(len(s)): # for each index i, check the odd case and even case
             tmp_1 = self.helper(s,i,i)
             if len(tmp_1) > len(res):
