Update 5. Longest Palindromic Substring.md

--- a/错题集/5. Longest Palindromic Substring.md
+++ b/错题集/5. Longest Palindromic Substring.md
@@ -37,7 +37,7 @@ return res
 ```
 
 ### sol 2:
-Start with each possible center of a palindrome (i for palindrome with odd length, [i,i] for palindrome with even length), check if could such palindrome could expand.
+Start with each possible center of a palindrome (i for palindrome with odd length, [i,i] for palindrome with even length), check if could such palindrome could expand. This solution has worst time complexity O(n^2), best time complexity O(n).
 ```python
 class Solution:
     def longestPalindrome(self, s: str) -> str:
