Update 332. Reconstruct Itinerary.md

--- a/Backtracking/332. Reconstruct Itinerary.md
+++ b/Backtracking/332. Reconstruct Itinerary.md
@@ -20,6 +20,11 @@ Output: ["JFK","ATL","JFK","SFO","ATL","SFO"]
 Explanation: Another possible reconstruction is ["JFK","SFO","ATL","JFK","ATL","SFO"].
 But it is larger in lexical order.
 ```
+## key points:
+1, 
+
+
+
 
 1st attempt (wrong solution):
 ```python
