Update 332. Reconstruct Itinerary.md

--- a/Backtracking/332. Reconstruct Itinerary.md
+++ b/Backtracking/332. Reconstruct Itinerary.md
@@ -61,8 +61,8 @@ def findItinerary(self, tickets):
     for a, b in sorted(tickets)[::-1]:
         targets[a] += b,
     route = []
-    def visit(airport):
-        while targets[airport]:
+    def visit(airport): 
+        while targets[airport]: # 用collections.defaultdict(list)的作用只是在这里，我用普通的dict的get(source, []) 取代也行！
             visit(targets[airport].pop())
         route.append(airport)
     visit('JFK')
