--- a/Dynamic Programming/152. Maximum Product Subarray.md
+++ b/Dynamic Programming/152. Maximum Product Subarray.md
@@ -27,4 +27,26 @@ ends at current index). If next num is negative, a negative current_min is neede
 it is unable to obtain the real current max for a negative number (when current_min before it is also negative). 
 
 
+Wrong solution 1:
+```python
+class Solution:
+    def maxProduct(self, nums: List[int]) -> int:
+        # integer array, no decimal
+        # at each index, store the cur_prod, which represents the maximum product subarray including current index, [-5,-4,-1,-2,3], [2,-5,-2,-4,3]
         
+        cur_max = cur_min = glo_max = nums[0]
+        
+        for i in range(1,len(nums)):
+            if nums[i] < 0:
+                cur_max = max(nums[i], cur_min * nums[i])
+                cur_min = min(nums[i], cur_max * nums[i])
+                
+            else:
+                cur_max = max(nums[i], cur_max * nums[i])
+                cur_min = min(nums[i], cur_min * nums[i])
+            
+            print(cur_max, cur_min)
+            glo_max = max(glo_max, cur_max)
+        
+        return glo_max
+```
