Update 322. Coin Change.md

--- a/Dynamic Programming/322. Coin Change.md
+++ b/Dynamic Programming/322. Coin Change.md
@@ -17,3 +17,21 @@ Note:
 You may assume that you have an infinite number of each kind of coin.
 
 ## Key points: 
+
+
+
+Wrong solution 1:
+```python
+class Solution:
+    def coinChange(self, coins: List[int], amount: int) -> int:
+        # This is a dynamic programming question
+        if amount == 1 or 0: # base cases dp(1) = dp(0) = 1
+            return 1
+        res = 0 
+        for coin in coins: # [1,2,5]
+            if amount >= coin:
+                res += self.coinChange(coins, amount - coin)
+        return res
+```
+### Bugs:
+
