Update 70. Climbing Stairs.md

--- a/Dynamic Programming/70. Climbing Stairs.md
+++ b/Dynamic Programming/70. Climbing Stairs.md
@@ -22,3 +22,6 @@ Explanation: There are three ways to climb to the top.
 2. 1 step + 2 steps
 3. 2 steps + 1 step
 ```
+
+
+dp(n) = dp(n-1) + dp(n-2), where n >=2, at the first glance, this recurrence relation is based on the last step. But without clearly defining the meaning of `dp`. If `dp` reprensents the number of distinct ways we can climb to step `n`, then `dp(n-1)` represents the number of distinct ways to climb to step `n-1`,  and `dp(n-2)` represents the number of distinct ways to climb to step `n-2`, but is it true that **the number of different ways to reach n equal to the sum of the number of different ways to reach (n-1) and (n-2) ?**. No! from `n-1` to `n`, there is just one possible way (take one step), but from `n-2` to `n`, you could take `1+1` or `+2`, there are 2 ways, **And more importantly,** 
