Update 70. Climbing Stairs.md

--- a/Dynamic Programming/70. Climbing Stairs.md
+++ b/Dynamic Programming/70. Climbing Stairs.md
@@ -23,5 +23,37 @@ Explanation: There are three ways to climb to the top.
 3. 2 steps + 1 step
 ```
 
+**Recurrence relation is DP(n) = DP(n-1) + DP(n-2)没问题**
 
-dp(n) = dp(n-1) + dp(n-2), where n >=2, at the first glance, this recurrence relation is based on the last step. But without clearly defining the meaning of `dp`. If `dp` reprensents the number of distinct ways we can climb to step `n`, then `dp(n-1)` represents the number of distinct ways to climb to step `n-1`,  and `dp(n-2)` represents the number of distinct ways to climb to step `n-2`, but is it true that **the number of different ways to reach n equal to the sum of the number of different ways to reach (n-1) and (n-2) ?**. No! from `n-1` to `n`, there is just one possible way (take one step), but from `n-2` to `n`, you could take `1+1` or `+2`, there are 2 ways, **And more importantly,** 
+
+Time limit exceeded solution: 
+```python
+class Solution:
+    def climbStairs(self, n: int) -> int:
+        # dp(n) = dp(n-1) + dp(n-2) 
+        if n == 1 or 0:
+            return 1
+    
+        return self.climbStairs(n-1) + self.climbStairs(n-2)
+```
+### Bugs:
+1, if statement has to be `if n == 1 or n == 0:`
+
+Add cache for memorization:
+```python
+class Solution:
+    def climbStairs(self, n: int) -> int:
+        # dp(n) = dp(n-1) + dp(n-2) 
+        cache = {} # cache要在recursive function的外面
+        def dp(n):
+            if n == 1 or n == 0:
+                return 1
+            if n in cache:
+                return cache[n]
+            else:
+                cache[n] = dp(n-1) + dp(n-2)
+                return cache[n]
+        
+        return dp(n)
+
+```
