Update 315. Count of Smaller Numbers After Self.md

--- a/Sorting+Searching/315. Count of Smaller Numbers After Self.md
+++ b/Sorting+Searching/315. Count of Smaller Numbers After Self.md
@@ -40,3 +40,8 @@ class Solution:
 Flawed idea: [5，2, 6, 1] 的natural reversed order is [6,5,2,1], 自然它对应的count of smaller number after self (n_s)的list
 是[3,2,1,0], 从[6,5,2,1]到[5,2,6,1]，可以看出6向右移了两个位置，所以它n_s = 3 - 2 = 1，5和2都是被移到更前面的idx去了，所以它们的n_s不变，1的位置
 没变，所以它的n_s也不变，可以得出res = [2,1,1,0]。
+
+### Idea:
+With the example [5,2,6,1], it's ascending order is [1,2,5,6], from the natural order [1,2,5,6] to a random order [5,2,6,1], 
+2 nums move from 5's left to its right, leaving the # of smaller number after 5 become 2, and 1 num moves from 2's left to its right, so the the # of smaller number after 2 is 1. With this observation, backwards, in the original random order list, the number of smaller number after x is the number that jumps from its right to its left during sorting process.
+
