Update 315. Count of Smaller Numbers After Self.md

--- a/Sorting+Searching/315. Count of Smaller Numbers After Self.md
+++ b/Sorting+Searching/315. Count of Smaller Numbers After Self.md
@@ -47,6 +47,5 @@ With the example [5,2,6,1], it's ascending order is [1,2,5,6], from the natural 
 
 Trick part: 1, how to keep track of/update jumps for each x? During mergesort, count the jumps at the `merging 2 sorted lists` phase. There are 2 ways to merge 2 sorted lists, one is to compare samllest in 2 lists and append the smaller to a new lists, until one of the two lists is used up (using `while` loop , pop out first) or iterated over (using for `for` loop). But this way is no good for counting the jumps for each number. Instead, backward, we compare the largest in the 2 sorted lists, say we have `L` and `R` as two sorted list to merge, if `L[-1]` is no bigger than `R[-1]`, then `R[-1]` should go to the current position (backward) in the merged list, pop out `R[-1]` then continue compare `L[-1]` with `R[-1]`, if `L[-1] > R[-1]`, `L[-1]` go to the current position and this means there are `len(R)` numbers jumps from `L[-1]`'s right to its left, the corresponding count of smaller number of `L[-1]` should be `+= len(R)`
 
-容易
-Trick part: 1, how to keep track of/update jumps for each x? During mergesort, count the jumps at the `merging 2 sorted lists` phase. There are 2 ways to merge 2 sorted lists, one is to compare samllest in 2 lists and append the smaller to a new lists, until one of the two lists is used up (using `while` loop , pop out first) or iterated over (using for `for` loop). But this way is no good for counting the jumps for each number. Instead, backward, we compare the largest in the 2 sorted lists, say we have `L` and `R` as two sorted list to merge, if `L[-1]` is no bigger than `R[-1]`, then `R[-1]` should go to the current position (backward) in the merged list, pop out `R[-1]` then continue compare `L[-1]` with `R[-1]`, if `L[-1] > R[-1]`, `L[-1]` go to the current position and this means there are `len(R)` numbers jumps from `L[-1]`'s right to its left, the corresponding count of smaller number of `L[-1]` should be `+= len(R)`
+容易出现bug的点：
 
