Update 88. Merge Sorted Array.md

--- a/Ad-hoc + Implementation/88. Merge Sorted Array.md
+++ b/Ad-hoc + Implementation/88. Merge Sorted Array.md
@@ -14,4 +14,40 @@ nums2 = [2,5,6],       n = 3
 Output: [1,2,2,3,5,6]
 ```
 
+```python
+class Solution:
+    def merge(self, nums1: List[int], m: int, nums2: List[int], n: int) -> None:
+        """
+        Do not return anything, modify nums1 in-place instead.
+        """
+        # nums1[:] = sorted(nums1[:m] + nums2)
+        # do not return anything, modify nums1 in-place是一个很关键的要求！in-place means cannot assign a whole list to replace nums1, have to modify it inside 
+        # two pointers
+        p1, p2 = 0, 0
+        
+        if m == 0:
+            for i in range(n):
+                nums1[i] = nums2[i] 
+        if n == 0:
+            return
+    
+        # 如何判断p1”走到头“？如果是正常的做一个新的list情况下：那就是while p1 <= m - 1 
+        # 但是现在nums1里面有不断增加进来的nums2里面的东西
+        # 每一个state，nums1里面总共的ele的数目是， m + p2个
+        
+        while p2 <= n - 1 and p1 <= m + p2:
+            if nums1[p1] > nums2[p2]: 
+                # p1前插一个位置插一个  
+                nums1[p1:p1] = [nums2[p2]]
+                p2 += 1
+                p1 += 1 # 此时前面多出一个nums2[p2]插进来，本来的p1被顶到后面一个位置
+            else: # nums[p1] <= nums[p2]
+                p1 += 1 # 还要看p1后面的
+             
+        if len(nums1) > m + n:
+            nums1[m + n:] = []
+        if p2 <= n - 1: # 说明p2还有一截尾巴没有拼过来
+            nums1[m + p2:] = nums2[p2:]
+```
+
 
