--- a/Ad-hoc + Implementation/88. Merge Sorted Array.md
+++ b/Ad-hoc + Implementation/88. Merge Sorted Array.md
@@ -14,6 +14,8 @@ nums2 = [2,5,6],       n = 3
 Output: [1,2,2,3,5,6]
 ```
 
+
+### Solution 1: merge from front to end, not a great operation
 ```python
 class Solution:
     def merge(self, nums1: List[int], m: int, nums2: List[int], n: int) -> None:
@@ -50,4 +52,20 @@ class Solution:
             nums1[m + p2:] = nums2[p2:]
 ```
 
+### Solution 2: merge from back to front! 
 
+```python
+class Solution:
+    def merge(self, nums1: List[int], m: int, nums2: List[int], n: int) -> None:
+        """
+        Do not return anything, modify nums1 in-place instead.
+        """
+        idc = m
+        for i in range(len(nums1))[::-1]:
+            if not nums2 or idc > 0 and nums1[idc-1] > nums2[-1]:
+                nums1[i] = nums1[idc-1]
+                idc -= 1 
+            else:
+                nums1[i] = nums2.pop()    
+
+```
