Update 55. Jump Game.md

--- a/Greedy/55. Jump Game.md
+++ b/Greedy/55. Jump Game.md
@@ -18,3 +18,22 @@ Output: false
 Explanation: You will always arrive at index 3 no matter what. Its maximum
              jump length is 0, which makes it impossible to reach the last index.
 ```
+
+
+At the first glance, it could be used dfs/bfs to do backtracking. 
+
+```python 
+class solution():
+    def canJump(self, nums):
+    """
+    
+    
+    """
+
+```
+
+
+
+
+Then could be optimized with dynamic programming.
+
